<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/customPrimary"
            android:elevation="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_back"
                android:contentDescription="@string/label_back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:textAppearanceLarge"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:text="@string/label_history"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/menu_local_history"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_local"
                android:contentDescription="@string/label_local"/>

            <ImageView
                android:id="@+id/menu_daterange"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_daterange"
                android:contentDescription="@string/label_range"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/history_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:scrollbars="vertical" />

            </android.support.design.widget.CoordinatorLayout>

        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/history_progressbar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</RelativeLayout>