<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/customPrimary"
            android:elevation="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:textAppearanceLarge"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/menu_history"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_history"
                android:contentDescription="@string/label_menu"/>

            <ImageView
                android:id="@+id/menu_settings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_settings"
                android:contentDescription="@string/label_menu"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingTop="70dp"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/label_default"
            android:src="@drawable/ic_default"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/label_default"/>

    </LinearLayout>
</RelativeLayout>